--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -11,10 +11,11 @@
     >
 
     <TextView
-        android:id="@+id/answer_text"
+        android:id="@+id/answerText"
         android:textSize="30dp"
         android:text=""
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp" />
 
 </LinearLayout>
